# MLB-s26-Project13

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: report_analysis_template.ipynb
scripts/: download_data.py  generate_embeddings.py  prepare_annotations.py  run_blast_baseline.py  run_evaluation.py  run_mmseqs_baseline.py  run_similarity_search.py  train_mlp.py
src/cross_species_pfp/: __init__.py  config.py  embedding_models.py  evaluation.py  faiss_utils.py  fasta_utils.py  go_utils.py  io_utils.py  projector.py
src/cross_species_pfp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
